--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "country-list-with-dial-code-and-flag": "^5.0.6",
     "country-names-list": "^1.0.0",
+    "dotenv": "^16.4.5",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
